--- a/srcs/front/src/styles/Profile.css
+++ b/srcs/front/src/styles/Profile.css
@@ -1,62 +1,155 @@
-.content {
-    /*border-style: solid;*/
-    /*border-color: #04AA6D;*/
-    overflow: auto;
-    width: 80%;
-    margin: 0 auto;
+.avatar {
+    position: absolute;
+    width: 170px;
+    height: 170px;
+    left: 44px;
+    top: 44px;
+
+    background: inherit;
+    border-radius: 50%;
+    border: 5px solid #ffffff;
+    box-sizing: border-box;
 }
 
-.user .channels {
-    margin: 1%;
+.username {
+    position: absolute;
+    width: 218px;
+    height: 72px;
+    left: 237px;
+    top: 63px;
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 60px;
+    line-height: 72px;
+    /* identical to box height, or 120% */
+
+    color: #ffffff;
+
+    /*border: 1px solid #B5B5B5;*/
+    text-shadow:-1px 0px #B5B5B5, 0px -1px #B5B5B5, 1px 0px #B5B5B5, 0px 1px #B5B5B5, -1px -1px #B5B5B5, 1px 1px #B5B5B5, -1px 1px #B5B5B5, 1px -1px #B5B5B5
 }
 
-.users {
-    /*background-color: aqua;*/
-    height: 10em;
-    margin-bottom: 5em;
+.settings {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 6px 6px 6px 8px;
+
+    position: absolute;
+    width: 103px;
+    height: 36px;
+    left: 240px;
+    top: 148px;
+
+    background: #525252;
+    border-radius: 4px;
 }
 
-.channels {
-    padding: 0.5em 0.5em 5em;
+.settings.text {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 4px 8px 4px 6px;
+
+    position: static;
+    width: 89px;
+    height: 24px;
+    left: 8px;
+    top: 6px;
+
+
+    /* Inside auto layout */
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    margin: 0px 0px;
 }
 
-.pagination a {
-    color: black;
-    float: left;
-    padding: 8px 16px;
-    text-decoration: none;
-    transition: background-color .3s;
-    border: 1px solid #ddd;
+.stat {
+    position: absolute;
+    width: 379px;
+    left: 43px;
+    top: 247px;
+    bottom: 44px;
+
+    background: #EEEEEE;
+    border-radius: 10px;
 }
 
-.pagination a.active {
-    background-color: #4CAF50;
-    color: white;
-    border: 1px solid #4CAF50;
-}
-
-.pagination a:hover:not(.active) {background-color: #ddd;}
-
-table {
-    border: 2px;
-    background-color: #EFEFEF;
-}
-
-th {
-    text-align: center;
-    background-color: #CCCCCC;
-    width: 150px;
+.stat.text {
+    position: absolute;
+    width: 313px;
+    height: 320px;
+    left: 30px;
+    top: 26px;
 
 }
 
-tr {
-    text-align: center;
+.stat.text.name {
+    position: absolute;
+    width: 228px;
+    height: 56px;
+    left: 30px;
+    top: 26px;
+
+    /* Headline 3 */
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 48px;
+    line-height: 56px;
+    /* identical to box height, or 117% */
+
+    color: #000000;
 }
 
-ul {
-    list-style-type: none;
+.matches {
+    position: absolute;
+    width: 276px;
+    right: 44px;
+    top: 247px;
+    bottom: 44px;
+
+    background: #DADADA;
+    border-radius: 10px;
 }
 
-.delete-button {
-    background-color: #ff4242;
+.matches.name {
+    position: absolute;
+    width: 207px;
+    height: 36px;
+    left: 28px;
+    top: 32px;
+
+    /* Headline 4 */
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 34px;
+    line-height: 36px;
+    /* identical to box height, or 106% */
+
+    color: #000000;
+}
+
+.matches.history {
+    position: absolute;
+    width: 182px;
+    height: 320px;
+    left: 28px;
+    top: 84px;
+}
+
+.user {
+    position: absolute;
+    width: 785px;
+    left: 84px;
+    top: 116px;
+    bottom: 74px;
+
+    /* Chat backround */
+    background: #C4C4C4;
+    border-radius: 10px;
 }
