Color and button fix

--- a/srcs/front/src/styles/ChannelChat.css
+++ b/srcs/front/src/styles/ChannelChat.css
@@ -6,5 +6,5 @@
 	display: flex;
 	float: left;
   	flex-direction: column-reverse;
-	background-color: rgb(222, 224, 71);
+	background-color: #EEEEEE;
 }
