--- a/srcs/front/src/styles/Profile.css
+++ b/srcs/front/src/styles/Profile.css
@@ -159,8 +159,8 @@
 
 .achievements {
     position: absolute;
-    width: 402px;
-    right: 89px;
+    width: 502px;
+    left: 910px;
     top: 116px;
     bottom: 74px;
 
